INCLUDES = -I@srcdir@/../ -I@srcdir@/../../common/include -I@srcdir@/../../3rdparty  $(shell wx-config --cppflags)
noinst_LIBRARIES = libDebugTools.a

libDebugTools_a_SOURCES = \
DisR3000A.cpp DisR5900.cpp DisVU0Micro.cpp \
DisR3000asm.cpp  DisR5900asm.cpp  DisVU1Micro.cpp \
Debug.h  DisVUmicro.h DisASM.h  DisVUops.h
