INCLUDES = -I@srcdir@/../   -I@srcdir@/../../common/include -I@srcdir@/../../3rdparty  $(shell wx-config --cppflags)
noinst_LIBRARIES = libRDebug.a

libRDebug_a_SOURCES = \
deci2.cpp       deci2_dcmp.cpp  deci2_drfp.h    deci2_iloadp.h  deci2_ttyp.cpp \
deci2_dbgp.cpp  deci2_dcmp.h  deci2.h         deci2_netmp.cpp   deci2_ttyp.h \
deci2_dbgp.h  deci2_iloadp.cpp  deci2_netmp.h